# an-implementation-of-algebraic-system

./: CMakeLists.txt  README.md  algebraic-system-with-single-binary-operation.h  algebraic-system-with-single-operation.h  binary-function.h  binary-relation.h  function.h  input-parse.h  main  main.cpp  pair.h  set.h  triple.h
